fixed: bug where bulk uploads would still be added even if job site didn't exist. added scrollbar to upload success log

--- a/front-end/src/components/asset-list/AssetList.css
+++ b/front-end/src/components/asset-list/AssetList.css
@@ -110,7 +110,6 @@ th button:hover{
     display: flex;
     justify-content: center;
     width: 500px;
-    font-size: 12px;
     margin-bottom: 3px;
   }
 
