--- a/front-end/src/components/upload-assets/UploadSuccess.css
+++ b/front-end/src/components/upload-assets/UploadSuccess.css
@@ -10,7 +10,9 @@
     border-style: solid;
     border-color: black;
     border-width: 1px;
-
+    max-height: 800px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .upload-success-log h3{
